--- a/notebooks/2.0-jd-initial-exploration.ipynb
+++ b/notebooks/2.0-jd-initial-exploration.ipynb
@@ -9686,13 +9686,6 @@
     "\n",
     "fig.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -9711,7 +9704,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.8.15 (default, Nov 24 2022, 08:57:44) \n[Clang 14.0.6 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
