--- a/notebooks/2.0-jd-initial-exploration.ipynb
+++ b/notebooks/2.0-jd-initial-exploration.ipynb
@@ -8,14 +8,13 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import plotly.express as px"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +158,7 @@
        "[3 rows x 219 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +368,7 @@
        "[5 rows x 219 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9660,6 +9659,41 @@
     }
    ],
    "source": [
+    "# VO2\n",
+    "fig = px.histogram(\n",
+    "    df_vo2, \n",
+    "    x='CVDESVO2', \n",
+    "    nbins=25,\n",
+    "    title=\"Histogram of VO2max\",\n",
+    "    labels={\n",
+    "        \"CVDESVO2\": \"Estimated VO2max (ml/kg/min)\"\n",
+    "    },\n",
+    "    template=\"simple_white\",\n",
+    "    color_discrete_map={\n",
+    "        \"CVDESVO2\": \"red\"\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "line_placement = df_vo2['CVDESVO2'].mean()\n",
+    "fig.add_vline(\n",
+    "    type=\"line\",\n",
+    "    line_color=\"salmon\",\n",
+    "    line_width=4,\n",
+    "    opacity=1,\n",
+    "    line_dash=\"dot\",\n",
+    "    x=line_placement\n",
+    ")\n",
+    "\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# BF%\n",
     "fig = px.histogram(\n",
     "    df_vo2, \n",
     "    x='CVDESVO2', \n",
@@ -9690,7 +9724,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fitlab",
+   "display_name": "fitlab-env",
    "language": "python",
    "name": "python3"
   },
@@ -9704,12 +9738,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15 (default, Nov 24 2022, 08:57:44) \n[Clang 14.0.6 ]"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6e130cbfc92e842470844f97199bc6d6358679ea8cff66c0a0a2566b5457a026"
+    "hash": "ddbacdd4b5ae30c5c6c578ce5003d10638e206dceb965d5f654635e25226f004"
    }
   }
  },
