--- a/notebooks/2.0-jd-initial-exploration.ipynb
+++ b/notebooks/2.0-jd-initial-exploration.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -267,58 +267,58 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>7.000000e+00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>11.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>5.397605e-79</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>15.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>5.397605e-79</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>21.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>5.000000e+00</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -347,34 +347,34 @@
        "   SEQN  CVDEXSTS      CVDEXCMT  CVDEXCL1  CVDEXCL2  CVDEXCL3  CVDEXCL4  \\\n",
        "0   5.0       1.0  5.397605e-79       NaN       NaN       NaN       NaN   \n",
        "1   6.0       1.0  5.000000e+00       NaN       NaN       NaN       NaN   \n",
+       "2   8.0       2.0  7.000000e+00       NaN       NaN       NaN       NaN   \n",
+       "3  10.0       3.0  1.000000e+00       1.0       2.0       2.0       2.0   \n",
        "4  11.0       1.0  5.397605e-79       NaN       NaN       NaN       NaN   \n",
-       "6  15.0       1.0  5.397605e-79       NaN       NaN       NaN       NaN   \n",
-       "8  21.0       1.0  5.000000e+00       NaN       NaN       NaN       NaN   \n",
        "\n",
        "   CVDEXCL5  CVDEXCL6  CVQ220A  ...  SIALANG  SIAPROXY  SIAINTRP  FIALANG  \\\n",
        "0       NaN       NaN      NaN  ...      NaN       NaN       NaN      NaN   \n",
        "1       NaN       NaN      NaN  ...      NaN       NaN       NaN      NaN   \n",
+       "2       NaN       NaN      2.0  ...      NaN       NaN       NaN      NaN   \n",
+       "3       2.0       2.0      NaN  ...      NaN       NaN       NaN      NaN   \n",
        "4       NaN       NaN      NaN  ...      NaN       NaN       NaN      NaN   \n",
-       "6       NaN       NaN      NaN  ...      NaN       NaN       NaN      NaN   \n",
-       "8       NaN       NaN      NaN  ...      NaN       NaN       NaN      NaN   \n",
        "\n",
        "   FIAPROXY  FIAINTRP  MIALANG  MIAPROXY  MIAINTRP  AIALANG  \n",
        "0       NaN       NaN      NaN       NaN       NaN      NaN  \n",
        "1       NaN       NaN      NaN       NaN       NaN      NaN  \n",
+       "2       NaN       NaN      NaN       NaN       NaN      NaN  \n",
+       "3       NaN       NaN      NaN       NaN       NaN      NaN  \n",
        "4       NaN       NaN      NaN       NaN       NaN      NaN  \n",
-       "6       NaN       NaN      NaN       NaN       NaN      NaN  \n",
-       "8       NaN       NaN      NaN       NaN       NaN      NaN  \n",
        "\n",
        "[5 rows x 219 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_vo2 = df[df['CVDESVO2'].notna()]\n",
+    "df_vo2 = df[df['CVDESVO2'].notna() < 90]\n",
     "df_vo2.head()"
    ]
   },
@@ -390,11 +390,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<AxesSubplot: >"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "men_df['CVDESVO2'].boxpl"
+    "men_sub = men_df[men_df[\"CVDESVO2\"] < 90]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45.36688471352354\n",
+      "45.200546511627905\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(men_df['CVDESVO2'].mean())\n",
+    "print(men_sub['CVDESVO2'].mean())"
    ]
   },
   {
