--- a/notebooks/1.0-jd-data-wrangling.ipynb
+++ b/notebooks/1.0-jd-data-wrangling.ipynb
@@ -163,7 +163,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fitlab",
+   "display_name": "fitlab-env",
    "language": "python",
    "name": "python3"
   },
@@ -177,12 +177,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.9.12 (main, Apr  5 2022, 01:52:34) \n[Clang 12.0.0 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6e130cbfc92e842470844f97199bc6d6358679ea8cff66c0a0a2566b5457a026"
+    "hash": "ddbacdd4b5ae30c5c6c578ce5003d10638e206dceb965d5f654635e25226f004"
    }
   }
  },
