Add annotations to plotly fig

--- a/notebooks/3.1-jd-report-figs.ipynb
+++ b/notebooks/3.1-jd-report-figs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,9 +125,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.180625000000001\n"
+     ]
+    }
+   ],
    "source": [
     "# Total MAE\n",
     "actual = df['Body Fat (%)'].drop(11)\n",
@@ -172,17 +180,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/0r/_6trl51948x_vd90czsk02t40000gq/T/ipykernel_32346/1711156510.py:1: FutureWarning:\n",
-      "\n",
-      "The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
-      "\n"
+      "/var/folders/0r/_6trl51948x_vd90czsk02t40000gq/T/ipykernel_9131/814455786.py:1: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "  visit_dates = df.groupby(['Visit Date']).mean()\n"
      ]
     }
    ],
@@ -192,17 +198,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/0r/_6trl51948x_vd90czsk02t40000gq/T/ipykernel_32346/1711156510.py:1: FutureWarning:\n",
-      "\n",
-      "The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
-      "\n"
+      "/var/folders/0r/_6trl51948x_vd90czsk02t40000gq/T/ipykernel_9131/1711156510.py:1: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "  per_week_df = df.groupby(pd.Grouper(key='Visit Date', freq='W')).mean()\n"
      ]
     }
    ],
@@ -212,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -239,17 +243,17 @@
          "textposition": "auto",
          "type": "bar",
          "x": [
-          "2023-01-23T00:00:00",
-          "2023-01-30T00:00:00",
-          "2023-01-31T00:00:00",
-          "2023-02-06T00:00:00",
-          "2023-02-07T00:00:00",
-          "2023-02-13T00:00:00",
-          "2023-02-21T00:00:00",
-          "2023-02-27T00:00:00",
-          "2023-02-28T00:00:00",
-          "2023-03-06T00:00:00",
-          "2023-03-07T00:00:00"
+          "2023-01-23",
+          "2023-01-30",
+          "2023-01-31",
+          "2023-02-06",
+          "2023-02-07",
+          "2023-02-13",
+          "2023-02-21",
+          "2023-02-27",
+          "2023-02-28",
+          "2023-03-06",
+          "2023-03-07"
          ],
          "xaxis": "x",
          "y": [
@@ -908,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -967,14 +971,34 @@
           "y": 3.5,
           "yanchor": "top",
           "yref": "y"
+         },
+         {
+          "bgcolor": "#FF8181",
+          "bordercolor": "#c7c7c7",
+          "borderpad": 4,
+          "borderwidth": 2,
+          "showarrow": false,
+          "text": "Mean Absolute Error: 5%",
+          "x": "2023-01-29T00:00:00",
+          "y": 10
+         },
+         {
+          "bgcolor": "#81FFB6",
+          "bordercolor": "#c7c7c7",
+          "borderpad": 4,
+          "borderwidth": 2,
+          "showarrow": false,
+          "text": "Goal 3.5%",
+          "x": "2023-01-26",
+          "y": 8
          }
         ],
         "barmode": "relative",
+        "font": {
+         "family": "Arial"
+        },
         "legend": {
          "tracegroupgap": 0
-        },
-        "margin": {
-         "t": 60
         },
         "shapes": [
          {
@@ -1554,6 +1578,9 @@
           }
          }
         },
+        "title": {
+         "text": "Skinfold Error over time"
+        },
         "xaxis": {
          "anchor": "y",
          "domain": [
@@ -1588,11 +1615,53 @@
    "source": [
     "# Per week \n",
     "fig = px.bar(per_week_df, x=per_week_df.index, y=per_week_df['Error'],\n",
-    "             range_y=[-10, 10], template='ggplot2')\n",
+    "             range_y=[-10, 10], template='ggplot2', title='Skinfold Error over time')\n",
     "\n",
     "fig.add_hrect(y0=-3.5, y1=3.5, line_width=0, fillcolor=\"green\", opacity=0.2, annotation_text=\"+-3.5 error\")\n",
     "\n",
+    "fig.update_layout(\n",
+    "    font_family='Arial'\n",
+    ")\n",
+    "\n",
+    "fig.add_annotation(x=per_week_df.index.min(), y=10, \n",
+    "                   text='Mean Absolute Error: 5%',\n",
+    "                   showarrow=False,\n",
+    "                   bordercolor=\"#c7c7c7\",\n",
+    "                   borderwidth=2,\n",
+    "                   borderpad=4,\n",
+    "                   bgcolor=\"#FF8181\"\n",
+    ")\n",
+    "\n",
+    "fig.add_annotation(x='2023-01-26', y=8, \n",
+    "                   text='Goal 3.5%',\n",
+    "                   showarrow=False,\n",
+    "                   bordercolor=\"#c7c7c7\",\n",
+    "                   borderwidth=2,\n",
+    "                   borderpad=4,\n",
+    "                   bgcolor=\"#81FFB6\"\n",
+    ")\n",
+    "                   \n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2023-01-29 00:00:00', freq='W-SUN')"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "per_week_df.index.min()"
    ]
   },
   {
@@ -2720,20 +2789,14 @@
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "dates = list(df['Visit Date'])\n",
-    "\n",
-    "date_object = datetime.strptime(dates[0], '%Y-%m-%d').date()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df['Visit Date'] = pd.to_datetime(df['Visit Date'], format='%Y-%m-%d')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -2749,9 +2812,7 @@
      ]
     }
    ],
-   "source": [
-    "visit_mean_df = df.groupby(['Visit Date']).mean()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
